fixed spacing error

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -66,7 +66,7 @@ body {
     left: -100%!important;
   }
 
-  @media (max-height: 700px) {
+  @media (max-height: 650px) {
     height: 2.5rem;
   }
 }
@@ -94,8 +94,8 @@ nav {
       gap: 4vw;
     }
 
-    @media (max-height: 700px) {
-      font-size: 1.7vw;
+    @media (max-height: 650px) {
+      font-size: 1rem;
       padding-right: 9vw;
       gap: 5vh;
     }
@@ -135,13 +135,13 @@ nav {
   position: relative;
 
   @media (max-width: 1200px) {
-    height: 100vh;
+    height: 80vh;
     text-align: center;
     justify-content: center;
   }
 
-  @media (max-height: 700px) {
-    height: 150vh
+  @media (max-height: 750px) {
+    height: 120vh
   }
 }
 
@@ -180,10 +180,6 @@ nav {
     text-align: center;
     padding: 3vh 0 0 0;
   }
-
-  @media (max-height: 700px) {
-    padding: 0 4rem;
-  }
 }
 
 .port-text {
@@ -193,9 +189,13 @@ nav {
   font-family: poppins, sans-serif;
   color: var(--text-color);
 
-  @media (max-height: 700px) {
+  @media (max-height: 750px) {
     gap: .8rem;
     padding: 0 2rem;
+  }
+
+  @media (max-height: 650px) {
+    padding: 0 4rem;
   }
 }
 
@@ -243,43 +243,48 @@ nav {
   display: flex;
   flex-direction: row;
   padding: 1.5rem 1.5rem 1.5rem 8.5rem;
-  gap: 1.5rem;
+  gap: 1.3rem;
   width: 40px;
   height: 40px;
   transition: all 0.5s;
 
   @media (max-width: 1200px) {
-    padding: 3.5vw 0.5vw 0 28.5vw;
+    padding: 3.5vw 0.5vw 0 23.5vw;
     transition: all 0.5s;
   }
 
-  @media (max-width: 1050px) {
+  @media (max-width: 1199px) {
     padding: 3.5vw 0.5vw 0 30.5vw;
     transition: all 0.5s;
   }
 
-  @media (max-width: 900px) {
+  @media (max-width: 1050px) {
     padding: 3.5vw 0.5vw 0 28.5vw;
     transition: all 0.5s;
   }
 
+  @media (max-width: 900px) {
+    padding: 3.5vw 0.5vw 0 23.5vw;
+    transition: all 0.5s;
+  }
+
   @media (max-width: 800px) {
-    padding: 3.5vw 0.5vw 0 20.5vw;
+    padding: 3.5vw 0.5vw 0 21.5vw;
+    transition: all 0.5s;
+  }
+
+  @media (max-width: 700px) {
+    padding: 3.5vw 0.5vw 0 18.5vw;
     transition: all 0.5s;
   }
 
   @media (max-width: 600px) {
-    padding: 3.5vw 0.5vw 0 12.5vw;
+    padding: 3.5vw 0.5vw 0 7.5vw;
     transition: all 0.5s;
   }
 
   @media (max-width: 500px) {
     padding: 3.5rem 0.5rem 1.5rem 0.5rem;
-    transition: all 0.5s;
-  }
-
-  @media (max-height: 700px) {
-    padding: 3.5vw 0.5vw 0 29.5vw;
     transition: all 0.5s;
   }
 }
@@ -301,7 +306,7 @@ nav {
     right: 0;
   }
 
-  @media (max-height: 700px) {
+  @media (max-height: 750px) {
     height: 150px;
     width: 150px;
     top: 20px;
