--- a/src/scss/titles.scss
+++ b/src/scss/titles.scss
@@ -24,7 +24,7 @@
       font-size: 6vw;
     }
 
-    @media (max-height: 700px) {
+    @media (max-height: 750px) {
       font-size: 6vh;
     }
   }
